Bug 1667120 - Prevent null pointer crash in nsImapProtocol::CreateNewLineFromSocket. r=mkmelin DONTBUILD

--HG--
extra : amend_source : ae38c938b81fba5967092ab546a9fbc0139f21ef